Fixed footer covering content on small screens

--- a/style.css
+++ b/style.css
@@ -97,13 +97,17 @@ img {
 	font-size: 20px;
 }
 
+.spacer {
+	height: 80px;
+}
+
 .footer {
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	width: 100%;
 	height: 80px;
-	background-color: #5456585b;
+	background-color: #545658c2;
 	text-align: center;
 }
 
